Next button, colour

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🧩 Who's in Charge?</h1>
-            <p>Test your knowledge of Canadian government responsibilities</p>
+            <h1>Who's in Charge?</h1>
+            <p>Test your knowledge of government responsibilities in Canada.</p>
         </header>
 
         <main>
@@ -87,29 +87,6 @@
                             <span id="persona-name">Civic Explorer</span>
                         </div>
                         <p id="persona-message">Keep exploring to learn more about how government works!</p>
-                    </div>
-                    
-                    <div class="share-section">
-                        <h4>Share Your Results</h4>
-                        <div class="share-buttons">
-                            <button class="share-btn twitter-btn" id="share-twitter">
-                                <span class="share-icon">🐦</span>
-                                Twitter
-                            </button>
-                            <button class="share-btn facebook-btn" id="share-facebook">
-                                <span class="share-icon">📘</span>
-                                Facebook
-                            </button>
-                            <button class="share-btn linkedin-btn" id="share-linkedin">
-                                <span class="share-icon">💼</span>
-                                LinkedIn
-                            </button>
-                            <button class="share-btn copy-btn" id="share-copy">
-                                <span class="share-icon">📋</span>
-                                Copy Link
-                            </button>
-                        </div>
-                        <div class="share-feedback" id="share-feedback"></div>
                     </div>
                     
                     <button id="restart-btn" class="restart-btn">
