change url in head

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:title" content="Who's in Charge? - Civic Engagement Quiz">
     <meta property="og:description" content="Test your knowledge of Canadian government responsibilities">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/quiz">
-    <meta property="og:image" content="https://your-domain.com/quiz-preview.jpg">
+    <meta property="og:url" content="https://hermanjustino.github.io/edc-products/">
+    <meta property="og:image" content="https://hermanjustino.github.io/edc-products/quiz-preview.jpg">
     
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Who's in Charge? - Civic Engagement Quiz">
     <meta name="twitter:description" content="Test your knowledge of Canadian government responsibilities">
-    <meta name="twitter:image" content="https://your-domain.com/quiz-preview.jpg">
+    <meta name="twitter:image" content="https://hermanjustino.github.io/edc-products/quiz-preview.jpg">
 </head>
 <body>
     <div class="container">
