--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SLBS8E7YN8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-SLBS8E7YN8');
+    </script>
+
     <!-- Open Graph meta tags for social sharing -->
     <meta property="og:title" content="Who's in Charge? - Civic Engagement Quiz">
     <meta property="og:description" content="Test your knowledge of Canadian government responsibilities">
