Update background, texts, aug 28

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                             <span id="persona-name">Civic Explorer</span>
                         </div>
                         <p id="persona-message">Keep exploring to learn more about how government works!</p>
+                        <span>Now is a great time to reach out to an elected official about an issue you care about!</span>
                     </div>
                     
                     <button id="restart-btn" class="restart-btn">
