Remove job loss from html

--- a/happiness/index.html
+++ b/happiness/index.html
@@ -136,8 +136,8 @@
         <div class="impact-factor" id="impact-factor">
             <div class="impact-icon" id="impact-icon">💼</div>
             <div class="impact-text">
-                <div class="impact-title-text" id="impact-title">Job Loss</div>
-                <div class="impact-description" id="impact-description">Losing your job has a significant negative impact on happiness.</div>
+                <div class="impact-title-text" id="impact-title">Doubling Income</div>
+                <div class="impact-description" id="impact-description">Surprisingly, doubling your income only slightly increases happiness.</div>
             </div>
             <div class="impact-value negative" id="impact-value">-0.5</div>
         </div>
