--- a/index.html
+++ b/index.html
@@ -3,131 +3,127 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who's in Charge? - Civic Engagement Quiz</title>
-
-    <!-- Favicon -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Our Journey To Civic Engagement</title>
+    <link rel="stylesheet" href="styles/landing.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="styles/landing.css">
+
+
+    <!-- Open Graph meta tags for social sharing -->
+    <meta property="og:title" content="Our Journey To Civic Engagement">
+    <meta property="og:description" content="Environmental Defence Canada x ArtWorksTO">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hermanjustino.github.io/edc/">
+    <meta property="og:image" content="https://hermanjustino.github.io/edc/images/quiz-preview.jpg">
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Our Journey To Civic Engagement">
+    <meta name="twitter:description" content="Environmental Defence Canada x ArtWorksTO">
+    <meta name="twitter:image" content="https://hermanjustino.github.io/edc/images/quiz-preview.jpg">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SLBS8E7YN8"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZNN3Z6H8Q"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-SLBS8E7YN8');
+        gtag('config', 'G-FZNN3Z6H8Q');
     </script>
-
-    <!-- Open Graph meta tags for social sharing -->
-    <meta property="og:title" content="Who's in Charge? - Civic Engagement Quiz">
-    <meta property="og:description" content="Test your knowledge of Canadian government responsibilities">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://hermanjustino.github.io/edc-products/">
-    <meta property="og:image" content="https://hermanjustino.github.io/edc-products/quiz-preview.jpg">
-
-    <!-- Twitter Card meta tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Who's in Charge? - Civic Engagement Quiz">
-    <meta name="twitter:description" content="Test your knowledge of Canadian government responsibilities">
-    <meta name="twitter:image" content="https://hermanjustino.github.io/edc-products/quiz-preview.jpg">
 </head>
 
 <body>
-    <!-- Loading Screen -->
-    <div id="loading-screen" class="loading-screen active">
-        <div class="logo-container">
-            <img src="assets/artworks-logo/AWTO_Youth Wordmark-BLACK.svg" alt="artworksTO Logo" class="loading-logo">
-        </div>
-    </div>
-    <div class="container">
+    <div class="landing-container">
         <header>
-            <h1>Who's in Charge?</h1>
-            <p>Test your knowledge of government responsibilities in Canada.</p>
+            <div class="logo-container">
+                <img src="assets/images/edc_logo.svg.png" alt="Environmental Defence Canada Logo" class="header-logo">
+            </div>
+            <h1>Interactive Civic Education Tools</h1>
+            <p>Explore data-driven tools to better understand government, society, and civic engagement</p>
         </header>
 
         <main>
-            <!-- Quiz Screen -->
-            <div id="quiz-screen" class="screen active">
-                <div class="progress-bar">
-                    <div class="progress-fill" id="progress-fill"></div>
-                </div>
-                <div class="question-counter">
-                    <span id="current-question">1</span> of <span id="total-questions">7</span>
-                </div>
-
-                <div class="question-card">
-                    <h2 id="question-text">Loading...</h2>
-                    <p class="question-subtitle">Drag the area of responsibility icon to the correct government level
-                    </p>
-
-                    <div class="drop-zones">
-                        <div class="drop-zone" data-government="Municipal">
-                            <div class="zone-icon">🏙️</div>
-                            <div class="zone-label">Municipal</div>
-                            <div class="zone-description">Cities & Towns</div>
-                        </div>
-                        <div class="drop-zone" data-government="Provincial">
-                            <div class="zone-icon">🏛️</div>
-                            <div class="zone-label">Provincial</div>
-                            <div class="zone-description">Provinces & Territories</div>
-                        </div>
-                        <div class="drop-zone" data-government="Federal">
-                            <div class="zone-icon">🍁</div>
-                            <div class="zone-label">Federal</div>
-                            <div class="zone-description">National Government</div>
-                        </div>
+            <div class="tools-grid">
+                <!-- Who's in Charge Tool -->
+                <div class="tool-card">
+                    <div class="card-header whos-in-charge">
+                        <i class="fas fa-building-government"></i>
                     </div>
-
-                    <div class="drag-area">
-                        <div class="drag-instructions">Drag this area of responsibility:</div>
-                        <div class="draggable-card" draggable="true" id="draggable-service" tabindex="0">
-                            <div class="service-emoji" id="service-emoji">🗑️</div>
-                            <div class="service-name" id="service-name">Garbage Collection</div>
-                        </div>
+                    <div class="card-content">
+                        <h2>Who's in Charge?</h2>
+                        <p>A drag-and-drop quiz to test your knowledge of which level of government is responsible for
+                            different services in Canada.</p>
+                        <ul class="features-list">
+                            <li><i class="fas fa-check"></i> Interactive drag-and-drop quiz</li>
+                            <li><i class="fas fa-check"></i> Learn about government responsibilities</li>
+                            <li><i class="fas fa-check"></i> Get personalized results</li>
+                        </ul>
+                        <a href="whos-in-charge/" class="explore-btn">Explore Tool</a>
                     </div>
                 </div>
-            </div>
 
-            <!-- Results Screen -->
-            <div id="results-screen" class="screen">
-                <div class="results-card">
-                    <h2>Quiz Complete!</h2>
-                    <div class="score-display">
-                        <span class="score-number" id="final-score">0</span>
-                        <span class="score-total">out of 12</span>
+                <!-- Close Elections Tool -->
+                <div class="tool-card">
+                    <div class="card-header close-elections">
+                        <i class="fas fa-vote-yea"></i>
                     </div>
-
-                    <div class="persona-result">
-                        <h3 id="persona-title">Your Civic Persona</h3>
-                        <div class="persona-badge" id="persona-badge">
-                            <span id="persona-name">Civic Explorer</span>
-                        </div>
-                        <p id="persona-message">Keep exploring to learn more about how government works!</p>
-                        <span>Now is a great time to reach out to an elected official about an issue you care
-                            about!</span>
+                    <div class="card-content">
+                        <h2>Close Elections</h2>
+                        <p>Interactive map showing where Ontario elections were decided by small margins, highlighting
+                            the importance of every vote.</p>
+                        <ul class="features-list">
+                            <li><i class="fas fa-check"></i> Interactive riding map</li>
+                            <li><i class="fas fa-check"></i> Explore close election margins</li>
+                            <li><i class="fas fa-check"></i> Understand electoral impact</li>
+                        </ul>
+                        <a href="voters/" class="explore-btn">Explore Tool</a>
                     </div>
+                </div>
 
-                    <button id="restart-btn" class="restart-btn">
-                        🔄 Try Again
-                    </button>
+                <!-- Global Happiness Tool -->
+                <div class="tool-card">
+                    <div class="card-header global-happiness">
+                        <i class="fas fa-globe-americas"></i>
+                    </div>
+                    <div class="card-content">
+                        <h2>Global Happiness</h2>
+                        <p>Data visualizations about happiness metrics across countries and factors that contribute to
+                            community well-being.</p>
+                        <ul class="features-list">
+                            <li><i class="fas fa-check"></i> Compare happiness scores</li>
+                            <li><i class="fas fa-check"></i> Explore community trust data</li>
+                            <li><i class="fas fa-check"></i> Discover social well-being factors</li>
+                        </ul>
+                        <a href="happiness/" class="explore-btn">Explore Tool</a>
+                    </div>
                 </div>
             </div>
         </main>
+
+        <section class="about-section">
+            <h2>About This Project</h2>
+            <p>These interactive tools are part of the <strong>ArtWorksTO x Environmental Defence Canada</strong>
+                collaboration. They aim to increase civic literacy, encourage participation in democracy, and make
+                complex data more accessible and engaging.</p>
+
+            <div class="creator-section">
+                <h3>Creator</h3>
+                <p><strong>Herman Justino</strong> - Creative Technologist & Data Consultant</p>
+                <p>Participant in the ArtWorksTO 2025 Program</p>
+            </div>
+        </section>
+
+        <footer>
+            <div class="footer-content">
+                <img src="assets/artworks-logo/AWTO_Youth Wordmark-BLACK.svg" alt="ArtWorksTO Logo" class="footer-logo">
+                <p class="creator-credit">Developed by Herman Justino for Environmental Defence Canada</p>
+            </div>
+        </footer>
     </div>
-
-    <footer class="quiz-footer">
-        <div class="footer-content">
-            <a href="https://torontoartsfoundation.org/programs/artworksto-newcomer/" target="_blank" rel="noopener noreferrer">
-                <img src="assets/artworks-logo/AWTO_Youth Wordmark-BLACK.svg" alt="artworksTO Logo" class="footer-logo">
-            </a>
-            <p class="creator-credit">© <span id="current-year"></span> <a href="https://hermanjustino.com" target="_blank" rel="noopener noreferrer">Herman Justino</a>. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
